VDR Plugin 'mcli' Revision History
----------------------------------
2021-03-16 0.9.6pre6
- pbiering apply adjusted fixes from https://www.vdr-portal.de/forum/index.php?thread/134181-mcli-error-video-data-stream-broken/&postID=1337872#post1337872

2021-03-16 0.9.6pre5
- pbiering add error/debug log for PreInit related to network device

2021-03-13 0.9.6pre4
- pbiering in case of --cam-disable option is active, do not enable triggerCam

2021-03-12 0.9.6pre3
- pbiering apply vdr-plugin-mcli-0.9.6n_05-FixSetChannelDeviceCamAlloc.patch from https://www.vdr-portal.de/forum/index.php?thread/134181-mcli-error-video-data-stream-broken/&postID=1337625#post1337625

2021-03-12 0.9.6pre2
- pbiering apply vdr-plugin-mcli-0.9.6m_02-DeviceReadyWithCi.patch from https://www.vdr-portal.de/forum/index.php?thread/134181-mcli-error-video-data-stream-broken/&postID=1337593#post1337593
- pbiering apply vdr-plugin-mcli-0.9.6m_01-TriggerCamAllPids.patch from https://www.vdr-portal.de/forum/index.php?thread/134181-mcli-error-video-data-stream-broken/&postID=1337593#post1337593

2021-03-11 0.9.6pre1
- pbiering introduce PreInit and PostExit to avoid crashes in case of other plugins have fatal issues and VDR has to stop instantly

2021-02-25
- pbiering add triggerCam patch from https://www.vdr-portal.de/forum/index.php?thread/134181-mcli-error-video-data-stream-broken/&postID=1336731#post1336731

2021-02-08
- pbiering fix spec file for rpmbuild -ta

2021-02-07
- pbiering add more header include fixes based on contribution from HelmutB

2021-02-06
- pbiering add additional special debug masks (see README), align/fix log prefix to "mcli::"

2021-02-05
- pbiering add log skip mask option (--logskipmask) (see logging.h)
- pbiering improve debugging enhancement based on contribution from HelmutB

2021-02-02
- pbiering include not covered patches from https://www.minidvblinux.de/forum/index.php?topic=9526.0

2021-01-30